# cns

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  scripts.py
cns/: cns.py  main.py  viz.py  wiener.py
tests/: sanity.py
